fix java.lang.OutOfMemoryError: Java heap space by updating JAVA_OPTS in /etc/default/tomcat7